# bevy-snake

./: Cargo.toml  plot.py
src/: ai.rs  board.rs  game.rs  lib.rs  main.rs  render.rs  server.rs  ui.rs  web.rs
