[package]
name = "bevy-snake"
version = "0.2.0"
edition = "2021"
description = "SNAKE WITH GUNS!"
default-run = "bevy-snake"

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
    "bevy_asset",
    "bevy_state",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "vorbis",
    "x11",
    "bevy_gizmos",
    "webgl2",
    "bevy_debug_stepping",
] }
bevy-inspector-egui = "0.29.1"
rand = "0.9.0"
thiserror = "2.0"
actix-web = "4.9.0"
actix-ws = "0.3.0"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
crossbeam = "0.8.4"
lazy_static = "1.5.0"
colored = "3.0.0"
log = "0.4.26"
colog = "1.3.0"
async-tungstenite = { version = "0.29.1", features = ["tokio-runtime"] }

[profile.release]
debug = true
